--- a/packages/core/src/localization/sp/sp.json
+++ b/packages/core/src/localization/sp/sp.json
@@ -551,23 +551,27 @@
 "Credential": "credencial"
 },
 "PushNotifications": {
-"EnableNotifications": "Habilitar notificaciones para recibir alertas instantáneas",
-"BeNotified": "Ser notificado cuando recibas:",
-"ReceiveNotifications": "Recibir notificaciones",
-"BulletFour": "Nuevos mensajes",
-"BulletOne": "Nuevas ofertas de credenciales",
-"BulletThree": "Actualizaciones a tus credenciales",
-"BulletTwo": "Nuevas solicitudes de prueba",
-"NotificationsOffMessage": "Ser notificado cuando recibas nuevas ofertas de credenciales, solicitudes de prueba, actualizaciones a tus credenciales, nuevos mensajes y más.",
-"NotificationsOffTitle": "Las notificaciones para Bifold están desactivadas",
-"NotificationsInstructionTitle": "Para habilitar notificaciones:",
-"InstructionsOne": "Abre la configuración de la aplicación",
-"InstructionsTwo": "Toca Notificaciones",
-"InstructionsThree": "Habilita notificaciones",
-"OpenSettings": "Abrir configuración",
-"Title": "Usar notificaciones push",
-"Subtitle": "Ser notificado cuando recibas:",
-"Enable": "Habilitar"
+  "EnableNotifications": "Habilitar notificaciones para recibir alertas instantáneas",
+  "BeNotified": "Ser notificado cuando recibas:",
+  "ReceiveNotifications": "Recibir notificaciones",
+  "BulletFour": "Nuevos mensajes",
+  "BulletOne": "Nuevas ofertas de credenciales",
+  "BulletThree": "Actualizaciones a tus credenciales",
+  "BulletTwo": "Nuevas solicitudes de prueba",
+  "NotificationsOffMessage": "Ser notificado cuando recibas nuevas ofertas de credenciales, solicitudes de prueba, actualizaciones a tus credenciales, nuevos mensajes y más.",
+  "NotificationsOffTitle": "Las notificaciones para Bifold están desactivadas",
+  "NotificationsInstructionTitle": "Para habilitar notificaciones:",
+  "InstructionsOne": "Abre la configuración de la aplicación",
+  "InstructionsTwo": "Toca Notificaciones",
+  "InstructionsThree": "Habilita notificaciones",
+  "OpenSettings": "Abrir configuración",
+  "Title": "Usar notificaciones push",
+  "Subtitle": "Recibe una notificación cuando recibas:",
+  "Item1": "Nuevas ofertas de credenciales",
+  "Item2": "Nuevas solicitudes de verificación",
+  "Item3": "Actualizaciones de tus credenciales",
+  "Item4": "Nuevos mensajes",
+  "Enable": "Habilitar"
 },
 "CredentialDetails": {
 "Id": "Id:",
